# ML

./: .gitignore  .gitmodule  .gitmodules  Drug_Database.ipynb  pyproject.toml  requirements.txt
.ipynb_checkpoints/: Drug_Database-checkpoint.ipynb
DeepLearning/: model_training.ipynb
python_revision/: pyproject.toml
python_revision/6_101/backtracking_code/: ast_read.py  graph_version.py  mixtape.py  test.py
python_revision/6_101/exams/mid_term/: combinations.py
python_revision/6_101/labs/lab1/: lab.py  rec-2.py  rec.py  test.py
python_revision/6_101/labs/lab2/: rec.py
python_revision/6_101/labs/lab2/image_processing/: lab.py  test.py
python_revision/6_101/labs/lab3/image_processing_2/: lab.py  test.py  test_seam_carving_helpers.py
python_revision/6_101/labs/lab4/bacon/: lab.py  test.py
python_revision/6_101/labs/lab5/snekoban/: server.py
python_revision/6_101/labs/lab6/: ll.py  rec.py  star_args.py
python_revision/6_101/labs/lab7/vector_rec/: rec.py
python_revision/6_101/labs/lab8/sat/: lab.py
python_revision/atm/: Design_ATM.md  testing.md  transaction.py
python_revision/notebooks/: README.md  Untitled.ipynb  data_uri.py  exec_demo.py  generators.ipynb  revision.ipynb
python_revision/oops/: main.py  person.py  range.py  shapes.py  vector.py
python_revision/reference/python-deepdive/Part 2/Section 09 - Project 4/project_4_goal_4/: playground.py
python_revision/src/: average_list.py  averager.py  data.py  example.txt  file_reading.py  fns.py  image_manipulation.py  powermod.py
python_revision/tests/: test_add_list.py  test_fib.py
(+9 files in other folders)
