[tool.poetry]
package-mode = false
name = "ml"
version = "0.1.0"
description = ""
authors = ["Devn"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
transformers = "^4.44.2"
numpy = "^2.1.1"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
scikit-image = "^0.24.0"
scipy = "^1.14.1"
torch = "^2.4.0"
torchvision = "^0.19.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
plotly = "^5.24.0"
openai = "^1.43.0"
pinecone = "^5.1.0"
ollama = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
